--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -1,7 +1,7 @@
 name: Run indexer
 
 on:
-  schedule: # When it's ready!
+  schedule:
   - cron: "*/15 * * * *"
   workflow_dispatch:
     branches: [ master ]
