Exit code 0 on no changes 2

--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -29,15 +29,13 @@ jobs:
     - name: Run indexer
       run: python indexer.py repositories.yaml
     - name: Commit files
+      continue-on-error: true # No changes = Failure
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "Indexer"
         cd cache
         git add .
         git commit -m "Index update"
-    - name: No changes # Commit with no changes = exit code <> 0
-      if: ${{ failure() }}
-      run: exit 0
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
