--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -1,8 +1,8 @@
 name: Run indexer
 
 on:
-  # schedule:
-  # - cron: "*/15 * * * *"
+  schedule:
+  - cron: "*/15 * * * *"
   workflow_dispatch:
     branches: [ master ]
 
