--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: 3.8
     - name: Create bash file for cloning
       run: |
+        mkdir cache
         python -m pip install pyyaml
         python parser.py repositories.yaml clonerepos.sh
         chmod +x clonerepos.sh
@@ -28,10 +29,12 @@ jobs:
     - name: Run indexer
       run: python indexer.py repositories.yaml
     - name: Commit files
+      continue-on-error: true # No changes = Failure
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "Indexer"
-        git add index/*.json
+        cd index
+        git add .
         git commit -m "Index update"
     - name: Push changes
       uses: ad-m/github-push-action@master
