--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -37,6 +37,7 @@ jobs:
         git add .
         git commit -m "Index update"
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@v0.6.0
       with:
+        branch: ${{ github.ref }}
         github_token: ${{ secrets.GITHUB_TOKEN }}
