--- a/.github/workflows/run-indexer.yml
+++ b/.github/workflows/run-indexer.yml
@@ -20,15 +20,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Fetch repos info
+    - name: Create bash file for cloning
       run: |
-        mkdir -p cache
-        python -m pip install pyyaml aiohttp
+        mkdir cache
+        python -m pip install pyyaml
         python parser.py repositories.yaml clonerepos.sh
         chmod +x clonerepos.sh git-retry.sh
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Clone non-GH repos
+    - name: Clone repos
       run: ./clonerepos.sh
     - name: Run indexer
       run: python indexer.py repositories.yaml
