--- a/repositories.yaml
+++ b/repositories.yaml
@@ -55,45 +55,256 @@ approved:
 # List of unapproved repos.
 # Will be parsed and categorized as "unapproved" by the indexer
 unapproved:
-  - https://github.com/baiumbg/baiumbg-Cogs
-  - https://github.com/tekulvw/Squid-Plugins@V3
   - https://github.com/ltzmax/maxcogs
   - https://github.com/thedataleek/eris-cogs
   - https://github.com/coffeebank/coffee-cogs
-  - https://github.com/Onii-Chan-Discord/onii-cogs
-  - https://github.com/OofChair/OofCogs
   - https://github.com/vertyco/vrt-cogs
   - https://github.com/Injabie3/lui-cogs-v3
-  - https://github.com/ExpertSunny/GamEraBot-cogs
   - https://github.com/goonstation/gooncogs
-  - https://github.com/Craftzman7/crafter-cogs
   - https://github.com/AAA3A-AAA3A/AAA3A-cogs
   - https://github.com/i-am-zaidali/cray-cogs
   - https://github.com/NoPlagiarism/PlusyCogs
-  - https://github.com/matchatealeaf/matcha-cogs
-  - https://github.com/Honkertonken/Honkertonken-Cogs
-  - https://github.com/flaree/pokecord-red
   - https://github.com/Kuro-Rui/Kuro-Cogs
   - https://github.com/jakehlee/JDG-Cogs-V3
   - https://github.com/sravan1946/sravan-cogs
   - https://github.com/karlsbjorn/karlo-cogs
-  - https://github.com/Noa-DiscordBot/noa-cogs
   - https://github.com/nukdokplex/nukdokplex-cogs
-  - https://github.com/Church13/YeahCogs
   - https://github.com/Flame442/FlameBountyCogs
   - https://github.com/jmesfo0/jmes-cogs
   - https://github.com/Mister-42/mr42-cogs
   - https://github.com/orchidalloy/crab-cogs
   - https://github.com/Drapersniper/PyLav-Cogs
   - https://github.com/raidensakura/raiden-cogs
-  - https://github.com/CalaMariGold/CalaMari-Cogs
-  - https://github.com/rushhee/cogs
   - https://github.com/Skylark95/skylark95-cogs
   - https://github.com/zhaobenny/bz-cogs
   - https://github.com/DJTOMATO/glas-cogs
-  - https://github.com/Khapra/Khapra-Cogs
   - https://github.com/burnacid/Botc-Red-Cogs
   
 # List of flagged cogs
 # Cogs present in this list will be ignored by the indexer
 flagged-cogs:
+  https://github.com/bobloy/Fox-V3/:
+    - announcedaily
+    - audiotrivia
+    - ccrole
+    - chatter
+    - conquest
+    - dad
+    - exclusiverole
+    - fifo
+    - firstmessage
+    - flag
+    - forcemention
+    - hangman
+    - infochannel
+    - isitdown
+    - launchlib
+    - leaver
+    - lovecalculator
+    - lseen
+    - planttycoon
+    - qrinvite
+    - reactrestrict
+    - recyclingplant
+    - rpsls
+    - scp
+    - stealemoji
+    - timerole
+    - tts
+    - unicode
+    - werewolf
+  https://github.com/Jintaku/Jintaku-Cogs-V3/:
+    - anisearch
+    - booru
+    - confession
+    - conversationgames
+    - dmannouncer
+    - gamesearch
+    - imdb
+    - osu
+    - pokemon
+    - roleplay
+    - wikia
+    - xkcd
+  https://github.com/nmbook/FalcomBot-cogs/:
+    - autoban
+    - hiback
+    - randt
+    - rolereqs
+    - rot13
+    - textt
+    - topic
+    - wikia
+  https://github.com/Redjumpman/Jumper-Plugins/:
+    - casino
+    - coupon
+    - dicetable
+    - jisho
+    - pokedex
+    - race
+    - raffle
+    - russianroulette
+    - shop
+  https://github.com/dualmoon/Cogs.v3:
+    - feedback
+    - selfassign
+    - weeedcog
+  https://github.com/designbyadrian/CogsByAdrian:
+    - crier
+    - insult
+    - killer
+    - penis
+  https://gitlab.com/Eragon5779/TechCogsV3:
+    - cpucompare
+    - encode
+    - genid
+    - hash
+  https://github.com/Malarne/discord_cogs:
+    - account
+    - anarchy
+    - apex
+    - heist
+    - League
+    - Leveler
+    - oBoobs
+  https://github.com/retke/Laggrons-Dumb-Cogs:
+    - codmw
+    - instantcmd
+    - roleinvite
+    - say
+    - tournaments
+    - warnsystem
+  https://github.com/fixator10/Fixator10-Cogs:
+    - adminutils
+    - captcha
+    - datautils
+    - generalchannel
+    - godvilledata
+    - leveler
+    - messageslog
+    - minecraftdata
+    - moreutils
+    - personalroles
+    - reverseimagesearch
+    - smmdata
+    - steamcommunity
+    - translators
+    - vocadb
+    - weather
+  https://github.com/elijabesu/SauriCogs:
+    - advancedlock
+    - application
+    - cookies
+    - cookiestore
+    - counting
+    - economyraffle
+    - forwarding
+    - gallery
+    - lock
+    - lvlupcookies
+    - marriage
+    - mentionable
+    - pick
+    - pingable
+    - reacttickets
+    - suggestion
+    - uniquename
+    - userlog
+  https://github.com/kennnyshiwa/kennnyshiwa-cogs:
+    - ark
+    - autogallery
+    - embedinvite
+    - imperialtoolkit
+    - lastfm
+    - listemoji
+    - pnw
+    - pottermore
+    - requestbox
+    - screenshare
+    - space
+    - tickets
+    - trackerinfo
+  https://gitlab.com/CrunchBangDev/cbd-cogs:
+    - Bio
+    - Bookmark
+    - Inspire
+    - Markov
+    - Scrub
+    - Tube
+    - Vibe
+  https://github.com/grayconcaves/FanCogs:
+    - ao3
+    - mxtxtags
+    - promptgenerator
+    - shibe
+  https://github.com/flapjax/FlapJack-Cogs:
+    - bigmoji
+    - colorme
+    - comics
+    - defcon
+    - dongers
+    - msgvote
+    - reactpoll
+    - smartreact
+    - smite
+    - spoiler
+    - wat
+    - wordclouds
+  https://github.com/SharkyTheKing/Sharky:
+    - charlimit
+    - lockdown
+    - morseshark
+    - msgtracker
+    - namegen
+    - newspublish
+    - reports
+    - strawpoll
+    - verify
+  https://github.com/TheWyn/Wyn-RedV3Cogs:
+    - anisearch
+    - lyrics
+    - nyaa
+    - sysinfo
+  https://github.com/Obi-Wan3/OB13-Cogs:
+    - announcements
+    - botaccess
+    - brainshop
+    - counting
+    - createchannels
+    - directmessage
+    - embedreact
+    - emojitools
+    - fah
+    - github
+    - improvtime
+    - lfg
+    - mentionhelp
+    - messagenotifier
+    - nodms
+    - privaterooms
+    - publicrooms
+    - quizrole
+    - reactionpolls
+    - referrals
+    - reply
+    - restrictedroleperms
+    - rolesync
+    - roletiers
+    - sitestatus
+    - statusrole
+    - streamrole
+    - templateposts
+    - temprole
+    - translate
+    - uploadstreaks
+  https://github.com/npc203/npc-cogs:
+    - bible
+    - customhelp
+    - google
+    - noreplyping
+    - snake
+    - snipe
+    - speak
+    - todo
+    - typeracer
+    - weeb
