--- a/repositories.yaml
+++ b/repositories.yaml
@@ -280,3 +280,10 @@ flagged-cogs:
     - todo
     - typeracer
     - weeb
+    https://github.com/taintedvalor/Valors-cogs
+    - truth
+    - dare
+    - game
+    - vent
+    - venter
+    - venting
