--- a/repositories.yaml
+++ b/repositories.yaml
@@ -86,7 +86,7 @@ unapproved:
   - https://github.com/Viking-Studios-Arma/VSCogs
   - https://github.com/CryptoLover705/cryptolover-cogs
   - https://github.com/i-am-zaidali/bounty-cogs
-  - https://github.com/tbr-development/BackRoomCogs
+  - https://github.com/shitshowdevelopment/ShitShowCogs
   - https://coastalcommits.com/SeaswimmerTheFsh/SeaCogs
   - https://github.com/space-wizards/wizard-cogs
   - https://git.purplepanda.cc/blizz/blizz-cogs
@@ -95,6 +95,8 @@ unapproved:
 # List of flagged cogs
 # Cogs present in this list will be ignored by the indexer
 flagged-cogs:
+  https://github.com/shitshowdevepment/shitshowcogs/:
+    - logger
   https://github.com/Jintaku/Jintaku-Cogs-V3/:
     - anisearch
     - booru
